@@ -25,7 +25,41 @@
 	</properties>
 
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>2.0-beta-5</version>
+				<configuration>
+					<locales>en</locales>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-Xms512m -Xmx512m -XX:MaxPermSize=256m
+						-Duser.timezone="Asia/Shanghai"</argLine>
+				</configuration>
+			</plugin>
+
+
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.1.1</version>
+			</plugin>
+		</plugins>
 	</build>
 
 	<dependencies>
@@ -36,7 +70,24 @@
 			<version>2.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>eclipselink</artifactId>
+			<version>2.1.2_14342997</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>oracle.eclipselink.coherence</groupId>
+			<artifactId>toplink-grid</artifactId>
+			<version>11.1.1.4.0_14342997</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
+
+
+
 
 	<reporting>
 		<plugins>
